Personas now summon when pressing the persona summon button Personas now attack when pressing the persona attack button Updated SpellItems to use the super of the use function Updated Entity Information Updated UI Updated Values and listings Updated Save information